syntax = "proto3";

package auth;

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Register (RegisterRequest) returns (LoginResponse);
  rpc ChangeLogin (ChangeLoginRequest) returns (BoolResponse);
  rpc ChangePassword (ChangePasswordRequest) returns (BoolResponse);
  rpc VerifyToken (VerifyTokenRequest) returns (VerifyTokenResponse);
  rpc GetLogin (Id) returns (Login);
  rpc DeleteAccount(Id) returns (BoolResponse);
}

message Id{
  string userId = 1;
}

message Login {
  string login = 1;
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string userId = 2;
  string login = 3;
  string createdAt = 4;
}

message RegisterRequest {
  string login = 1;
  string password = 2;
}

message ChangeLoginRequest {
  string userId = 1;
  string newLogin = 2;
}

message ChangePasswordRequest {
  string userId = 1;
  string currentPassword = 2;
  string newPassword = 3;
}

message BoolResponse {
  bool success = 1;
}

message VerifyTokenRequest {
  string token = 1;
}

message VerifyTokenResponse {
  bool valid = 1;
  string sub = 2;
}
